Fixing debug logging issue with final jar by packaging application properly
The maven shade plugin was corrupting some logback/slf4j related files in the final uber jar which meant that the --verbose option no longer worked.

Now we are using the maven appassembler plugin to distribute all dependent jars not merged, this has begun to work again.

Since we are using appassembler, this also replaces non-docker-pair-stairs.sh.

I have also included an integration test to ensure the final distribution zip is working.